--- a/rest-api/README
+++ b/rest-api/README
@@ -1,10 +1,18 @@
-* Running server
+# Rest-api for contacts-app
 
-python main.py
+## Running server
 
+```sh
+# python main.py
+ * Restarting with stat
+ * Debugger is active!
+ * Debugger PIN: 329-439-215
+ * Running on http://localhost:5000/ (Press CTRL+C to quit)
+```
 
-* Manaage.py
+## Manage.py
 
-# Populate db with example data
-
-python manage.py populate
+- Populate db with example data
+```sh
+# python manage.py populate
+```
